# golden-compass-proto

./: .env,example  .gitignore  README.md  docker-compose.yml  start-windows.ps1  stop-windows.ps1  test-generation.ps1
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: celery_app.py  config.py
backend/app/models/: content.py
backend/app/services/: ai_client.py  tasks.py  video_creator.py
backend/scripts/: dev.ps1  test.ps1
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: ContentGenerator.vue  ContentList.vue  ContentStatus.vue
frontend/src/services/: api.js
